Add and update FE BE admin post manager